Added GTFS dummy files and added markdown to notebooks

--- a/PTAL/GTFS_processing/GTFS_processing_PTAL.ipynb
+++ b/PTAL/GTFS_processing/GTFS_processing_PTAL.ipynb
@@ -11,7 +11,7 @@
     " * The code is designed to handle, manipulate, and analyze GTFS data to support transit planning and operations.\n",
     " * It includes functionalities such as data cleaning, transformation, and visualization to provide insights into transit schedules and routes.\n",
     "\n",
-    "In a step-by-step guide, we will explain what steps are taken to achieve our final output (SAP features) that we need in our future research"
+    "In a step-by-step guide, we will explain what steps are taken to achieve our final output (SAP features) that we need in our future research for the PTAL score"
    ]
   },
   {
