--- a/travel_time/GTFS_processing/GTFS_processing_traveltime.ipynb
+++ b/travel_time/GTFS_processing/GTFS_processing_traveltime.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processing GTFS data for the Travel Time\n",
+    " * This notebook contains code that performs various tasks related to GTFS (General Transit Feed Specification) data processing.\n",
+    " * The code is designed to handle, manipulate, and analyze GTFS data to support transit planning and operations.\n",
+    " * It includes functionalities such as data cleaning, transformation, and visualization to provide insights into transit schedules and routes.\n",
+    "\n",
+    "In a step-by-step guide, we will explain what steps are taken to achieve our final output (SAP features of trips with the time it takes to get from stop 1, to stop 2, etc.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing necessary libraries and locating raw GTFS data\n",
+    "First, we have to import the necessary libraries and locate the GTFS data.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -18,6 +38,14 @@
     "file_agency = 'gtfs-nl/agency.txt'\n",
     "file_stops = 'gtfs-nl/stops.txt'\n",
     "file_stop_times = 'gtfs-nl/stop_times.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the datasets\n",
+    "Now we will load all relevant datasets and print the head to see how the df is structured"
    ]
   },
   {
@@ -473,6 +501,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging datasets\n",
+    "The `df_stop_times` and `df_trips` are merged on column `trip_id`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -700,6 +736,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To create an unique key for every route, we will create `combined_column`. Since this route will take place many times, we can drop de duplicates of this unique key per route."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -923,6 +966,13 @@
     "\n",
     "# Print the head of the dataframe to verify the new column\n",
     "df_combined.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But first, we have to clean out invalid times of the `arrival_time` and `departure_time` columns."
    ]
   },
   {
@@ -1163,252 +1213,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows with NaN values: 778839\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "# Count the number of rows with NaN values in arrival_time or departure_time\n",
-    "nan_rows_count = df_combined['arrival_time'].isna().sum() + df_combined['departure_time'].isna().sum()\n",
-    "\n",
-    "# Print the count of NaN rows\n",
-    "print(f\"Number of rows with NaN values: {nan_rows_count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>trip_id</th>\n",
-       "      <th>stop_sequence</th>\n",
-       "      <th>stop_id</th>\n",
-       "      <th>stop_headsign</th>\n",
-       "      <th>arrival_time</th>\n",
-       "      <th>departure_time</th>\n",
-       "      <th>pickup_type</th>\n",
-       "      <th>drop_off_type</th>\n",
-       "      <th>timepoint</th>\n",
-       "      <th>shape_dist_traveled</th>\n",
-       "      <th>...</th>\n",
-       "      <th>realtime_trip_id</th>\n",
-       "      <th>trip_headsign</th>\n",
-       "      <th>trip_short_name</th>\n",
-       "      <th>trip_long_name</th>\n",
-       "      <th>direction_id</th>\n",
-       "      <th>block_id</th>\n",
-       "      <th>shape_id</th>\n",
-       "      <th>wheelchair_accessible</th>\n",
-       "      <th>bikes_allowed</th>\n",
-       "      <th>combined_column</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>176957772</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2862831</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1900-01-01 17:18:00</td>\n",
-       "      <td>1900-01-01 17:18:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>IFF:SPR:6760</td>\n",
-       "      <td>Leiden Centraal</td>\n",
-       "      <td>6760</td>\n",
-       "      <td>Sprinter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>461459.0</td>\n",
-       "      <td>1298623.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1_Leiden Centraal_6760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>176957772</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2862836</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1900-01-01 17:21:00</td>\n",
-       "      <td>1900-01-01 17:21:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2695.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>IFF:SPR:6760</td>\n",
-       "      <td>Leiden Centraal</td>\n",
-       "      <td>6760</td>\n",
-       "      <td>Sprinter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>461459.0</td>\n",
-       "      <td>1298623.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2_Leiden Centraal_6760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>176957772</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2861628</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1900-01-01 17:29:00</td>\n",
-       "      <td>1900-01-01 17:30:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11879.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>IFF:SPR:6760</td>\n",
-       "      <td>Leiden Centraal</td>\n",
-       "      <td>6760</td>\n",
-       "      <td>Sprinter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>461459.0</td>\n",
-       "      <td>1298623.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3_Leiden Centraal_6760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>176957772</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2861181</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1900-01-01 17:35:00</td>\n",
-       "      <td>1900-01-01 17:35:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19619.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>IFF:SPR:6760</td>\n",
-       "      <td>Leiden Centraal</td>\n",
-       "      <td>6760</td>\n",
-       "      <td>Sprinter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>461459.0</td>\n",
-       "      <td>1298623.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4_Leiden Centraal_6760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>176957772</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2861973</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1900-01-01 17:41:00</td>\n",
-       "      <td>1900-01-01 17:42:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28177.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>IFF:SPR:6760</td>\n",
-       "      <td>Leiden Centraal</td>\n",
-       "      <td>6760</td>\n",
-       "      <td>Sprinter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>461459.0</td>\n",
-       "      <td>1298623.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5_Leiden Centraal_6760</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     trip_id  stop_sequence  stop_id stop_headsign        arrival_time  \\\n",
-       "0  176957772              1  2862831           NaN 1900-01-01 17:18:00   \n",
-       "1  176957772              2  2862836           NaN 1900-01-01 17:21:00   \n",
-       "2  176957772              3  2861628           NaN 1900-01-01 17:29:00   \n",
-       "3  176957772              4  2861181           NaN 1900-01-01 17:35:00   \n",
-       "4  176957772              5  2861973           NaN 1900-01-01 17:41:00   \n",
-       "\n",
-       "       departure_time  pickup_type  drop_off_type  timepoint  \\\n",
-       "0 1900-01-01 17:18:00            0              1          1   \n",
-       "1 1900-01-01 17:21:00            0              0          1   \n",
-       "2 1900-01-01 17:30:00            0              0          1   \n",
-       "3 1900-01-01 17:35:00            0              0          1   \n",
-       "4 1900-01-01 17:42:00            0              0          1   \n",
-       "\n",
-       "   shape_dist_traveled  ...  realtime_trip_id    trip_headsign  \\\n",
-       "0                  1.0  ...      IFF:SPR:6760  Leiden Centraal   \n",
-       "1               2695.0  ...      IFF:SPR:6760  Leiden Centraal   \n",
-       "2              11879.0  ...      IFF:SPR:6760  Leiden Centraal   \n",
-       "3              19619.0  ...      IFF:SPR:6760  Leiden Centraal   \n",
-       "4              28177.0  ...      IFF:SPR:6760  Leiden Centraal   \n",
-       "\n",
-       "   trip_short_name trip_long_name direction_id  block_id   shape_id  \\\n",
-       "0             6760       Sprinter            1  461459.0  1298623.0   \n",
-       "1             6760       Sprinter            1  461459.0  1298623.0   \n",
-       "2             6760       Sprinter            1  461459.0  1298623.0   \n",
-       "3             6760       Sprinter            1  461459.0  1298623.0   \n",
-       "4             6760       Sprinter            1  461459.0  1298623.0   \n",
-       "\n",
-       "   wheelchair_accessible  bikes_allowed         combined_column  \n",
-       "0                      0            1.0  1_Leiden Centraal_6760  \n",
-       "1                      0            1.0  2_Leiden Centraal_6760  \n",
-       "2                      0            1.0  3_Leiden Centraal_6760  \n",
-       "3                      0            1.0  4_Leiden Centraal_6760  \n",
-       "4                      0            1.0  5_Leiden Centraal_6760  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Filter out the rows with invalid trip_ids\n",
-    "df_combined_cleaned = df_combined[~df_combined['trip_id'].isin(invalid_trip_ids)]\n",
-    "\n",
-    "# Print the cleaned dataframe\n",
-    "df_combined_cleaned.head()"
+    "Now we will look at how many duplicates there are in `combined_column` and drop them"
    ]
   },
   {
@@ -1458,6 +1266,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's examine the columns of the current dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1482,6 +1297,13 @@
    "source": [
     "# Print the  columns of the dataframe\n",
     "df_trips_stop_sequence.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have to load the `stops.txt` to add the stop_name and their spatial references, so it can be plotted in QGIS. We will merge it with the df `df_trips_stop_sequence` on `stop_id`"
    ]
   },
   {
@@ -1733,6 +1555,13 @@
     "\n",
     "# Print the head of the dataframe to verify the new column\n",
     "df_trips_stop_sequence.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we have to create a new column with the duration to the next stop. First, we will filter the df on `trip_id` and `stop_sequence`, so that every next row, will be the next stop. We will add the time of the next stop to `next_arrival_time` and then, we can calculate  `duration_to_next_stop` by extracting `next_arrival_time` by `departure_time`."
    ]
   },
   {
@@ -2693,6 +2522,13 @@
     "\n",
     "# Print the head of the dataframe to verify the new column\n",
     "df_trips_stop_sequence.head(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our project, we will also add the stop_id and stop_name for the second stop. This will create a more complete df."
    ]
   },
   {
@@ -3681,6 +3517,13 @@
     "df_trips_stop_sequence['stop_name2'] = df_trips_stop_sequence.groupby('trip_id')['stop_name'].shift(-1)\n",
     "# Print the head of the dataframe to verify the new column\n",
     "df_trips_stop_sequence.head(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since there are multiple ways to get from stop1 to stop2 (one per train, one per bus for example), we are only interested in the fastest one. So we will drop any duplicates and keep the fastest one"
    ]
   },
   {
@@ -4704,33 +4547,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows in df_combined_cleaned: 71514\n"
-     ]
-    }
-   ],
    "source": [
-    "# Print the number of rows in the dataframe\n",
-    "print(f\"Number of rows in df_combined_cleaned: {df_trips_stop_sequence.shape[0]}\")"
+    "Now we will reorder and rename the columns so it can be processed in QGIS."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "ruby"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5316,6 +5137,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the output\n",
+    "\n",
+    "Now that we have the final dataframe, we want to save it as a CSV file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
@@ -5327,24 +5157,6 @@
    "source": [
     "df_final.to_csv('traveltime.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "ruby"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
